Added service page + updating course

--- a/pub.html
+++ b/pub.html
@@ -16,6 +16,7 @@
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="pub.html">Publications</a></li>
 	    <li><a href="students.html">People</a></li>
 	    <li><a href="teaching.html">Teaching</a></li>
+	    <li><a href="service.html">Service</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
 	<div id="content_p">
@@ -25,15 +26,26 @@
 
 		    <tr valign="top">
 			<td>
+			<a href="https://arxiv.org/pdf/2307.08939"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Runtime Stealthy Perception Attacks against DNN-based Adaptive Cruise Control Systems” </font></b></b><br>
+			X. Zhou, A. Chen, M. Kouzel, M. McCarty, C. Nita-Rotaru, <u>H. Alemzadeh</u><br>
+			To appear in the <i>Proc. 20th ACM ASIA Conf. on Computer and Communications Security (ACM ASIACCS 2025)</i>, 2025.
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
 			<a href="https://arxiv.org/pdf/2310.07059"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
-			   -->
 			</td>
 			<td>
 			<p align="left">
 			<b><font color=#000000>“DKEC: Domain Knowledge Enhanced Multi-Label Classification for Diagnosis Prediction” </font></b></b><br>
 			X. Ge, S. Abhishek, R. D. Williams, J. A. Stankovic, <u>H. Alemzadeh</u><br>
-			To appear in the <i>2024 Conference on Empirical Methods in Natural Language Processing (EMNLP)</i>, 2024. <b></b> <br>   	
+			In the <i>2024 Conference on Empirical Methods in Natural Language Processing (EMNLP)</i>, 2024.<b>(Acceptance rate ~ 18.4 for long papers)</b><br>   	
 			</p>
 			</td>
 		    </tr>
@@ -41,14 +53,12 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://www.dropbox.com/scl/fi/x2wbf2fn2yo9qp8reosy2/HealthSec24_SAM_Mohammadreza.pdf?rlkey=v2l25kiqimuv6whgoeau0ya87&e=1&st=lp228vq6&dl=0"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
-			   -->
 			</td>
 			<td>
 			<p align="left">
 			<b><font color=#000000>“SAM: Foreseeing Inference-Time False Data Injection Attacks on ML-enabled Medical Devices” </font></b></b><br>
 			M. Hallajiyan, A. P. Dharmalingam, G. Mitra, <u>H. Alemzadeh</u>, S. Iqbal, and K. Pattabiraman<br>
-			To appear in the <i>Workshop on Cybersecurity in HealthCare (HealthSec), Co-held with ACM CCS’24</i>, 2024. <b></b> <br>   	
+			In the <i>Workshop on Cybersecurity in HealthCare (HealthSec), Co-held with ACM CCS’24</i>, 2024. <b></b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -56,14 +66,12 @@
 		    <tr valign="top">
 			<td>
 			<a href="./papers/SafeComp_2024.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
-			   -->
 			</td>
 			<td>
 			<p align="left">
 			<b><font color=#000000>“Strategic Resilience Evaluation of Neural Networks within Autonomous Vehicle Software” </font></b></b><br>
 			A. Schmedding, P. Schowitz, X. Zhou, Y. Lu, L. Yang, <u>H. Alemzadeh</u>, E. Smirni<br>
-			To appear in the <i>43rd International Conference on Computer Safety, Reliability and Security (SafeComp)</i>, 2024. <b></b> <br>   	
+			In the <i>43rd International Conference on Computer Safety, Reliability and Security (SafeComp)</i>, 2024. <b>(Acceptance Rate ~ 23.5%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -71,8 +79,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2403.06705.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -86,14 +92,12 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2403.06734.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
 			<b><font color=#000000>“Real-Time Multimodal Cognitive Assistant for Emergency Medical  Services” </font></b></b><br>
 			K. Weerasinghe, S. Janapati, X. Ge, S. Kim, S. Iyer, J. Stankovic, <u>H. Alemzadeh</u><br>
-			In the <i>9th ACM/IEEE Conference on Internet of Things Design and Implementation (IoTDI)</i>, 2024.</b> <br>   	
+			In the <i>9th ACM/IEEE Conference on Internet of Things Design and Implementation (IoTDI)</i>, 2024.</b> <b>(Acceptance Rate ~ 36.7%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -101,8 +105,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2308.12789"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -116,8 +118,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2306.16577.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -131,8 +131,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="./papers/IJCARS_COMPASS_accepted.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -146,8 +144,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="./papers/DCOSS_IOT_2023_emsReACT.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -162,8 +158,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="./papers/IPSN_Poster_2023_SenseEMS.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -178,8 +172,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="./papers/CHASE_2023_EMS-BERT.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -194,8 +186,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2303.09913.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -210,8 +200,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2302.14237.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -225,8 +213,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://virginia.app.box.com/s/2d5hy0aw4robf0tl1hktup6qe1y6gph6"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -240,8 +226,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2211.15413"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -256,8 +240,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2208.06479.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -272,8 +254,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2204.09183.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -287,8 +267,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2204.06768.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -302,8 +280,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="./papers/ICRA_2022.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -317,8 +293,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://onlinelibrary.wiley.com/doi/10.1002/rcs.2375"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -332,8 +306,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="./papers/CHASE_2021.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -347,8 +319,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2104.02545.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--   <a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
@@ -362,8 +332,6 @@
 		    <tr valign="top">
 			<td>
 			<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9402746"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
-			   -->
 			</td>
 			<td>
 			<p align="left">
