--- a/research.html
+++ b/research.html
@@ -16,6 +16,7 @@
 	    <li><a href="pub.html">Publications</a></li>
 	    <li><a href="students.html">People</a></li>
 	    <li><a href="teaching.html">Teaching</a></li>
+		<li><a href="service.html">Service</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
 	<div id="content_p">
