--- a/students.html
+++ b/students.html
@@ -16,6 +16,7 @@
 	    <li><a href="pub.html">Publications</a></li>
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="students.html">People</a></li>
 		<li><a href="teaching.html">Teaching</a></li>
+		<li><a href="service.html">Service</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
 	<div id="content_p">
@@ -73,8 +74,7 @@
 		    <td></td>
 			<td><ul> 
 			<li>Tessa Heick</li>
-			<li>Abhishek Satpathy</li>
-			<li>Grant Xiao</li>
+			<li>Zachary Schrader</li>
 			</ul>
 			</td>
 		</tr>
@@ -88,7 +88,7 @@
 			<td>
 			<ul>
 			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a>, Ph.D., 2024 <b><b>&#8594;</b></b> Assist. Prof. @ Louisiana State University&ensp;</li>	
-			<li><a href = "https://www.linkedin.com/in/maryam-bagheri-15623450/">Maryam Bagheri</a>, Postdoc, 2024 <b>&#8594;</b> Samsung Semiconductor&ensp;</li>
+			<li><a href = "https://www.linkedin.com/in/maryam-bagheri-15623450/">Maryam Bagheri</a>, Postdoc, 2024 <b>&#8594;</b> NVIDIA&ensp;</li>
 			<li><a href="https://kch4fk.github.io">Kay Hutchinson</a>, Ph.D., 2023</li>
 			<li><a href="https://www.linkedin.com/in/mustafa-hotaki/">Mustafa Hotaki</a>, M.Sc., 2020 <b>&#8594;</b> Counterpoint Consulting&ensp;</li>
 			<li><a href="https://www.linkedin.com/in/yasarsamin/">Mohammad Samin Yasar</a> <b>&#8594;</b> Ph.D. @ UVA&ensp;</li>
@@ -108,7 +108,8 @@
 			<td></td>
 			<td>
 			<ul>
-			<li>Zachary Schrader</li>
+			<li>Abhishek Satpathy</li>
+			<li>Grant Xiao</li>
 			<li>Saahith Janapati</li>
 			<li>Shrisha Yapalparvi</li>
 			<li>Chloe Smith <b>&#8594;</b> Elder Research&ensp;</li>
