--- a/teaching.html
+++ b/teaching.html
@@ -15,6 +15,7 @@
 	    <li><a href="pub.html">Publications</a></li>
 	    <li><a href="students.html">People</a></li>
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="teaching.html">Teaching</a></li>
+	    <li><a href="service.html">Service</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
 
@@ -32,7 +33,7 @@
 			<u><a href="./teaching/ece_6434">Dependable Computing Systems (ECE/CS 4434/6434)</a></u><br>
 			Instructor, ECE/CS Departments, Spring 2017, 2018, 2019, 2021, 2022, Fall 2023, 2024<br><br>
             <u><a href="./teaching/ece_6501">Advanced Embedded Computing Systems (ECE 4501/6501, CS 6501)</a></u><br>
-			Instructor, ECE Department, Fall 2017, 2018, 2020, 2021, Spring 2023, 2024<br><br>
+			Instructor, ECE Department, Fall 2017, 2018, 2020, 2021, Spring 2023, 2024, 2025<br><br>
 			</p>
 			</td>
 			</tr>
