--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE 4501/6501, CS 6501 - Spring 2024</title>
+<title>ECE 4501/6501, CS 6501 - Spring 2025</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
 	<tr>
 	<td>
 	<p align="left" style="font-size:22px">
-	   <b><br> ECE 4501/6501, CS 6501 - Spring 2024 <br>
+	   <b><br> ECE 4501/6501, CS 6501 - Spring 2025 <br>
 	   Real-time Embedded Systems<br></b>
 	</p>
 	<p align="left" style="font-size:15px;color:red">
@@ -112,27 +112,27 @@
     Office: 259 Olsson Hall (Link Lab)<br>
     <br>
     <b>Instructor Office Hours:</b> <br>
-    Fridays&ensp;10-11 AM<br> 
+    TBD&ensp;TBD<br> 
     In person in Olsson 259 and via Zoom<br>
     Other times by appointment<br>
     <br>
     
 	
 	<strong>Teaching Assistants:</strong> <br> 
-	Xugui Zhou <br>
+	Seyed Hamid Reza Roodabeh <br>
 	Keshara Weerasinghe <br>
-	Kidus Fasil <br>
+	Paul Karhnak <br>
 	<br>
     <strong>TA Office Hours: </strong> <br>
     In person in Rice 240 and via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Mondays&ensp;</td><td>3:30-4:30pm&ensp;(Link Lab)</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>2:00-3:00pm&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>11:00-12:00pm&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>1:00-2:00pm&ensp;</td><tr>
-	<tr><td>Thursdays&ensp;</td><td>2:00-3:00pm&ensp;</td><tr>
-	<tr><td>Fridays&ensp;</td><td>1:00-2:00pm&ensp;</td><tr>
+	<tr><td>Mondays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Fridays&ensp;</td><td>TBD&ensp;</td><tr>
 	
 	</tbody>
 	</table>
