--- a/teaching/ece_6501/schedule.html
+++ b/teaching/ece_6501/schedule.html
@@ -25,7 +25,11 @@
 	</p>
     <p align="left" style="font-size:16px">
     The following schedule lists the tentative activities for each week and throughout the semester. 
-    This schedule is <b><u>subject to change</b></u>. You will be informed of any updates or changes here and on the Collab website and at the beginning of each class. <br></p>
+    This schedule is <b><u>subject to change</b></u>. You will be informed of any updates or changes here and on the Collab website and at the beginning of each class. <br>
+    <br>
+    <b> <u> Note</u>:</b> All students must participate <b><u>in person</u></b> for the <b>Final Project Demo and Presentations on <u>Saturday, May 3, 2-5 PM</u>. </b>
+    <br> 
+    </p>
     <p align="right" style="font-size:14px"><b>(Reading: &ensp; V = Valvano, L&S = Lee and Seshia, PK = Koopman, KN = Knight)</b><br></p>
     <p>
     <iframe width = "100%" height = 1020px src="https://docs.google.com/spreadsheets/d/e/2PACX-1vToBGTB2nfKPR-Aj4JjFvZJFSYu8a0sBYU9Epu-H5qhQeilAM01Q10dZb9dEZrc0FkS-7Emjg17UQ4E/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
