--- a/teaching/ece_6501/schedule.html
+++ b/teaching/ece_6501/schedule.html
@@ -27,8 +27,9 @@
     The following schedule lists the tentative activities for each week and throughout the semester. 
     This schedule is <b><u>subject to change</b></u>. You will be informed of any updates or changes here and on the Collab website and at the beginning of each class. <br>
     <br>
-    <b> <u> Note</u>:</b> All students must participate <b><u>in person</u></b> for the <b>Final Project Demo and Presentations on <u>Saturday, May 3, 2-5 PM</u>. </b>
-    <br> 
+    <b> <u>Important Reminders</u>:</b> <br>
+    <b>Midterm Exam</b> will be held <b><u>in person</u></b> in class on <b><u>April 7, 2-3:15 PM</u></b>.<br>
+    All students must participate <b><u>in person</u></b> for the <b>Final Project Demo and Presentations on <u>Saturday, May 3, 2-5 PM</u>. </b> <br> <br> 
     </p>
     <p align="right" style="font-size:14px"><b>(Reading: &ensp; V = Valvano, L&S = Lee and Seshia, PK = Koopman, KN = Knight)</b><br></p>
     <p>
