--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -112,9 +112,9 @@
     Office: 259 Olsson Hall (Link Lab)<br>
     <br>
     <b>Instructor Office Hours:</b> <br>
-    TBD&ensp;TBD<br> 
-    In person in Olsson 259 and via Zoom<br>
-    Other times by appointment<br>
+    Mondays & Wednesdays&ensp;3:30-4:00 PM<br> 
+    <u>In-person</u> in Olsson 259<br>
+    <u>Zoom or Other times</u> by appointment<br>
     <br>
     
 	
@@ -124,19 +124,19 @@
 	Paul Karhnak <br>
 	<br>
     <strong>TA Office Hours: </strong> <br>
-    In person in Rice 240 and via Zoom<br>
+	<u>In-person:</u> <br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Mondays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Thursdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Fridays&ensp;</td><td>TBD&ensp;</td><tr>
-	
+	<tr><td>Mondays&ensp;</td><td>Request by Email&ensp;</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>10-11&ensp;&ensp;&ensp;&ensp; Rice 240</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>11-12&ensp;&ensp;&ensp;&ensp; Link Lab Arena</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>10-11&ensp;&ensp;&ensp;&ensp; Rice 240</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>4:30-5:30&ensp; Rice 240</td><tr>
+	<tr><td>Fridays&ensp;</td><td>10-11&ensp;&ensp;&ensp;&ensp; Link Lab Arena</td><tr>
 	</tbody>
 	</table>
 	<br>
+	<u>Zoom or other times</u> request by email.<br>
 	</div>
 </div>
 
