change TA OH location

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -128,7 +128,7 @@
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
 	<tr><td>Mondays&ensp;</td><td>Request by Email&ensp;</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>10-11&ensp;&ensp;&ensp;&ensp; Rice 240</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>10-11&ensp;&ensp;&ensp;&ensp; Link Lab Arena</td><tr>
 	<tr><td>Wednesdays&ensp;</td><td>11-12&ensp;&ensp;&ensp;&ensp; Link Lab Arena</td><tr>
 	<tr><td>Thursdays&ensp;</td><td>10-11&ensp;&ensp;&ensp;&ensp; Rice 240</td><tr>
 	<tr><td>Thursdays&ensp;</td><td>4:30-5:30&ensp; Rice 240</td><tr>
